--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,13 @@ dev = [
     "mypy>=1.8.0",
     "ruff>=0.1.0",
 ]
+webui = [
+    "fastapi>=0.104.0",
+    "uvicorn[standard]>=0.24.0",
+    "python-multipart>=0.0.6",
+    "aiofiles>=23.2.1",
+    "jinja2>=3.1.2",
+]
 
 [project.urls]
 Homepage = "https://github.com/your-org/kgen"
