--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,11 @@ dependencies = [
     "websocket-client>=1.8.0",
     "requests>=2.31.0",
     "rich>=13.7.0",
+    "fastapi>=0.104.0",
+    "uvicorn[standard]>=0.24.0",
+    "python-multipart>=0.0.6",
+    "aiofiles>=23.2.1",
+    "jinja2>=3.1.2",
 ]
 
 [project.optional-dependencies]
@@ -40,14 +45,13 @@ dev = [
     "flake8>=7.0.0",
     "mypy>=1.8.0",
     "ruff>=0.1.0",
-]
-webui = [
     "fastapi>=0.104.0",
     "uvicorn[standard]>=0.24.0",
     "python-multipart>=0.0.6",
     "aiofiles>=23.2.1",
     "jinja2>=3.1.2",
 ]
+
 
 [project.urls]
 Homepage = "https://github.com/your-org/kgen"
